crux-mir/test/symb_eval/overrides/override2.good
test override2/<DISAMB>::f[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- override2/<DISAMB>::f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:9: 45:79 !test/symb_eval/overrides/override2.rs:9:5: 9:49: error: in override2/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/overrides/override2.rs:9:5:
[Crux]   	foo.wrapping_add(1) == foo

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
